--- a/domain.yml
+++ b/domain.yml
@@ -1,49 +1,134 @@
-version: "2.0"
-
-intents:
-  - greet
-  - goodbye
-  - affirm
-  - deny
-  - mood_great
-  - mood_unhappy
-  - bot_challenge
-  - ICU_Vacant_beds
-  - Non_ICU_Vacant_beds
-
-responses:
-  utter_greet:
-  - text: "Are you looking for vacant beds?"
-    buttons:
-      - payload: "/affirm"
-        title: "YES"
-      - payload: "/deny"
-        title: "NO"
-
-  utter_beds_type:
-  - text: "What are you looking for?"
-    buttons:
-      - payload: "/ICU_Vacant_beds"
-        title: "ICU Vacant Beds"
-      - payload: "/Non_ICU_Vacant_beds"
-        title: "Non ICU Vacant Beds"
-
-  utter_sure:
-  - text: "Sure, let me check..."
-
-
-  utter_goodbye:
-  - text: "Thanks for the visit. \nWear mask, wash your hands regularly and keep 3m distance from each other. \nStay Home, Stay safe.\n"
-
-  utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
-
-  utter_also_check:
-    - text: "Also check this link for area wise requirements: [COVID ARMY](https://covid.army/)"
-
-actions:
-  - action_check_icu_vacant_beds
-  - action_check_non_icu_vacant_beds
+version: '2.0'
+config:
+  store_entities_as_slots: true
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
+intents:
+- welcome_message:
+    use_entities: true
+- goodbye:
+    use_entities: true
+- usingchatbot:
+    use_entities: true
+- yesiam:
+    use_entities: true
+- nonotyet:
+    use_entities: true
+- ihavequestions:
+    use_entities: true
+- justbrowsing:
+    use_entities: true
+- contactsales:
+    use_entities: true
+- iagree:
+    use_entities: true
+- idontagree:
+    use_entities: true
+- integrations:
+    use_entities: true
+- contactus:
+    use_entities: true
+- email:
+    use_entities: true
+- features:
+    use_entities: true
+- conversationalui:
+    use_entities: true
+- growsrevenue:
+    use_entities: true
+- improvecustomeracquisition:
+    use_entities: true
+- privacypolicy:
+    use_entities: true
+- main_menu:
+    use_entities: true
+- gobacktofeatures:
+    use_entities: true
+- user_name:
+    use_entities: true
+- request_names:
+    use_entities: true
+- phone_number:
+    use_entities: true
+entities:
+- email
+slots:
+  email:
+    type: rasa.shared.core.slots.TextSlot
+    initial_value: null
+    auto_fill: true
+    influence_conversation: true
+  first_name:
+    type: rasa.shared.core.slots.TextSlot
+    initial_value: null
+    auto_fill: true
+    influence_conversation: true
+  phone_number:
+    type: rasa.shared.core.slots.TextSlot
+    initial_value: null
+    auto_fill: true
+    influence_conversation: true
+  requested_slot:
+    type: rasa.shared.core.slots.UnfeaturizedSlot
+    initial_value: null
+    auto_fill: true
+    influence_conversation: false
+responses:
+  utter_goodbye:
+  - text: Bye
+  utter_usingchatbot:
+  - buttons:
+    - payload: 👍 Yes, I am
+      title: 👍 Yes, I am
+    - payload: 👎 No, not yet
+      title: 👎 No, not yet
+    text: Are you our current customer?
+  utter_yesiam:
+  - buttons:
+    - payload: 🤝Contact sales
+      title: 🤝Contact sales
+    - payload: 🚀 Features
+      title: 🚀 Features
+    - payload: ⚙ Integrations
+      title: ⚙ Integrations
+    - payload: 📧 Contact us
+      title: 📧 Contact us
+    text: What information are you looking for?
+  utter_ask_first_name:
+  - text: What is your full name?
+  utter_ask_phone_number:
+  - text: What is your phone number?
+  utter_submit:
+  - text: What's your business email address?
+  utter_nonotyet:
+  - buttons:
+    - payload: 🤝Contact sales
+      title: 🤝Contact sales
+    - payload: 🚀 Features
+      title: 🚀 Features
+    - payload: ⚙ Integrations
+      title: ⚙ Integrations
+    - payload: 📧 Contact us
+      title: 📧 Contact us
+    text: What information are you looking for?
+actions:
+- action_welcome_message
+- action_ihavequestions
+- action_justbrowsing
+- action_contactsales
+- action_iagree
+- action_idontagree
+- action_integrations
+- action_contactus
+- action_features
+- action_email
+- action_conversationalui
+- action_growthrevenue
+- action_customeracquisition
+- action_privacypolicy
+- action_email_user
+- utter_submit
+- action_phonenumber
+forms: {}
+e2e_actions: []
