--- a/data/stories.yml
+++ b/data/stories.yml
@@ -2,24 +2,24 @@ version: "2.0"
 
 stories:
 
-- story: interactive_story_1
-  steps:
-  - intent: iagree
-  - action: action_iagree
-  - action: name_form
-  - active_loop: name_form
-  - slot_was_set:
-    - requested_slot: first_name
-  - slot_was_set:
-    - first_name: shakir
-  - slot_was_set:
-    - requested_slot: phone_number
-  - slot_was_set:
-    - phone_number: 0876432363
-  - slot_was_set:
-    - requested_slot: null
-  - active_loop: null
-  - action: utter_submit
+# - story: interactive_story_1
+#   steps:
+#   - intent: iagree
+#   - action: action_iagree
+#   - action: name_form
+#   - active_loop: name_form
+#   - slot_was_set:
+#     - requested_slot: first_name
+#   - slot_was_set:
+#     - first_name: shakir
+#   - slot_was_set:
+#     - requested_slot: phone_number
+#   - slot_was_set:
+#     - phone_number: 0876432363
+#   - slot_was_set:
+#     - requested_slot: null
+#   - active_loop: null
+#   - action: utter_submit
 
 - story: first path
   steps:
